--- a/Readme
+++ b/Readme
@@ -1,3 +1,6 @@
 http://aperiodic.net/phil/scala/s-99/
 
 S-99: Ninety-Nine Scala Problems
+
+Reference:
+http://www.brunton-spall.co.uk/post/2011/12/02/map-map-and-flatmap-in-scala/
